--- a/Homework7/MiniCrawler.Tests/MiniCrawler.Tests.fsproj
+++ b/Homework7/MiniCrawler.Tests/MiniCrawler.Tests.fsproj
@@ -17,6 +17,7 @@
     <PackageReference Include="NUnit3TestAdapter" Version="4.5.0" />
     <PackageReference Include="NUnit.Analyzers" Version="4.0.1" />
     <PackageReference Include="coverlet.collector" Version="6.0.0" />
+    <PackageReference Include="Moq" Version="4.20.70" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\MiniCrawler\MiniCrawler.fsproj" />
